fixed title width on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -188,7 +188,7 @@ h4 {
 
 .particles-small {
     width: 100vw;
-    min-height: 117px;
+    min-height: 130px;
     .particles-js-canvas-el {
         width: 100vw !important;
         height: 160px !important;
